--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -23,6 +23,7 @@
           <li><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
+      <p><a href="{% url 'blog:post_search' %}">Search</a></p>
     </div>
   </body>
 </html>
